Update and rename 2018-11-14-linux.md to 2018-11-14-linux-1.md

--- a/_posts/2018-11-14-linux-1.md
+++ b/_posts/2018-11-14-linux-1.md
@@ -1,23 +1,24 @@
 ---
 layout: post
-title: 만화로 배우는 리눅스 시스템 관리 정리(1) 
+title: Linux 명령어 정리(1) 
 description: "리눅스 기본 명령어"
 modified: 2018-11-14
 tags: [linux]
 categories: [Linux]
 ---
 
+만화로 배우는 리눅스 시스템 관리 1권을 읽고 정리한 글입니다. 
 회사에서 리눅스를 쓰는 일이 많은데 사용하는 명령어는 몇 개 밖에 안돼서 
 아쉬움에 이 책을 봤는데 유용한 것들도 많고 정리가 돼 좋았다. 
 <br> 신입들에게 추천!
 
-### 1. 다른 컴퓨터를 리모트로 조작하기 
+### 1. SSH 
+
+SSH(Secure Shell) - 네트워크 상의 다른 컴퓨터에 로그인하거나 원격 시스템에서 명령을 실행하도록 해 주는 응용프로그램 또는 프로토콜 
+                     - 통신 경로가 암호화되서 안전하다 
   
- - SSH(Secure Shell) - 네트워크 상의 다른 컴퓨터에 로그인하거나 원격 시스템에서 명령을 실행하도록 해 주는 응용프로그램 또는 프로토콜 
-              - 통신 경로가 암호화되서 안전하다 
-    
-       - 사용법: ssh 사용자명@접속할 로그인 pc 주소 
-       - ex) ssh jmkim@192.168.56.1 
+    - 사용법: ssh 사용자명@접속할 로그인 pc 주소 
+    - ex) ssh jmkim@192.168.56.1 
       
     
 ### 2. sudo 
@@ -70,7 +71,7 @@ categories: [Linux]
     언두(되돌리기) - u , 리두(언두반대)  - 컨트롤 + r  
 
 
-### 5. 가상터미널(tmux) 
+### 5. tmux 
      
    - tmux : 터미널 화면을 여러개로 분할하고, 세션을 생성하여 attach/detach를 자유롭게 할 수 있는 터미널 멀티플렉서
    - 설치 : apt install tmux 
@@ -98,7 +99,7 @@ categories: [Linux]
       
  ![tmux2](https://user-images.githubusercontent.com/26668309/48963644-5606df00-efda-11e8-9889-a291f05ef7fc.JPG)
       
-### 6. 네트워크 건너서 파일 복사(scp)
+### 6. scp
  
 -scp(Secure Copy) - 네트워크를 통해서 파일을 복사하는 명령어 
     
@@ -109,7 +110,7 @@ categories: [Linux]
      
 
 
-### 7. 시스템 과부하 파악하기(top) 
+### 7. top 
 
 ![top1](https://user-images.githubusercontent.com/26668309/48965090-f8828a80-eff9-11e8-903f-00f30af6de05.JPG)
     
